# cv-mcp

./: .env.example  .gitignore  Justfile  README.md  cv_mcp.config.json  pyproject.toml  requirements.txt
cli/: caption_image.py  image_metadata.py
configs/: double_flash.json  double_mixed_pro_text.json  double_pro.json  triple_flash.json  triple_ollama_qwen.json  triple_pro.json
docs/: CHANGELOG.md
src/cv_art_mcp/: __init__.py  mcp_server.py
src/cv_art_mcp/captioning/: __init__.py  local_captioner.py  openrouter_client.py
src/cv_mcp/: __init__.py  mcp_server.py
src/cv_mcp/captioning/: __init__.py  local_captioner.py  ollama_client.py  openrouter_client.py
src/cv_mcp/metadata/: __init__.py  config.json  prompts.py  runner.py  schema.json  vocab.json
